k8s/dev/backend-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    name: postgres
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      name: postgres
  template:
    metadata:
      labels:
        name: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: backend
            - name: POSTGRES_PASSWORD
              value: postgres
            - name: POSTGRES_USER
              value: postgres
          image: 'postgres:13.1'
          imagePullPolicy: Always
          name: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
      restartPolicy: Always
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: postgres
  name: postgres
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    name: postgres
