k8s/dev/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: backend
    spec:
      containers:
        - image: 'thingookni/backend:${BACKEND_TAG}'
          imagePullPolicy: Always
          name: backend
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: "/etc/spring/config"
              name: backend-config
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: backend-config
          configMap:
            name: backend-config
            items:
              - key: application.yml
                path: application.yml

---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: backend
  name: backend
spec:
  selector:
    name: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
