k8s/dev/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      name: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: keycloak
    spec:
      containers:
        - args:
            - -b
            - 0.0.0.0
            - -Dkeycloak.migration.action=import
            - -Dkeycloak.migration.provider=singleFile
            - -Dkeycloak.migration.file=/config/import.json
            - -Dkeycloak.migration.strategy=IGNORE_EXISTING
            - -Dkeycloak.migration.usersExportStrategy=SAME_FILE
          image: 'quay.io/keycloak/keycloak:12.0.2'
          name: keycloak
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: "/config/"
              name: keycloak-config
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: keycloak-config
          configMap:
            name: keycloak-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: keycloak
  name: keycloak
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    name: keycloak
